--- a/audios.html
+++ b/audios.html
@@ -32,7 +32,7 @@
     				<a href="animaciones.html">ANIMACIONES</a>
     			</li>	
     			<li>
-    				<a href="formulario.html">FORMULARIO</a>
+    				<a href="FORMULARIO2.html">FORMULARIO</a>
     			</li>	
 
   				</NAV>
